# sudoku-solver-web

./: .gitignore  LICENSE
.github/: RELEASE_TEMPLATE.md
.github/workflows/: backend.yml  frontend.yml
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  start.sh
backend/tests/: test_api.py
frontend/: README.md  jest.config.ts  next-sitemap.config.js  package.json
frontend/__tests__/: SudokuGrid.test.tsx
frontend/public/: robots.txt  sitemap-0.xml  sitemap.xml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ImageUploader.tsx  SudokuGrid.tsx
