[tool.poetry]
name = "sudoku-backend"
version = "0.1.0"
description = ""
authors = ["ryuya-matsunawa <ruymtnw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
opencv-python-headless = "^4.11.0.86"
numpy = "^2.2.6"
pillow = "^11.2.1"
python-multipart = "^0.0.20"
pytesseract = "^0.3.13"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
